# qdeh

./: LICENSE  README.md  pyproject.toml
qdeh/: clima.py  dados.py  datas.py  key.py  main.py  menu_main.py
qdeh/assets/: cal_2023.csv  calendario_2022.csv  clima_atual.json  key.json
