[tool.poetry]
name = "qdeh"
version = "0.1.0"
description = ""
authors = ["TrexPD <leynad157@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
lxml = "^4.9.1"
requests = "^2.28.1"
tinydb = "^4.7.0"
rich = "^12.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
